adding functionality to use vi commands for copy and paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,3 +93,14 @@ set -g status-justify centre
 #Notify when activity happens on other windows
 setw -g monitor-activity on
 set -g visual-activity on
+
+#enable moving through the panel using vi navigation keys
+setw -g mode-keys vi
+
+#Remapp Copy and Paste Keys to use vi keys
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
