--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,6 +94,10 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
+#Copy-paste integration 
+#brew install reattach-to-user-namespace
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
 #enable moving through the panel using vi navigation keys
 setw -g mode-keys vi
 
@@ -103,4 +107,4 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
