fixed syntastic to use local eslint binary if it exists and fixed mode-mouse in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ bind -r L resize-pane -R 5
 #set -g mouse-select-window off
 
 #globally off
-setw -g mode-mouse off
+set -g mouse off
 
 #make tmux display in 256 colors
 set -g default-terminal "screen-256color"
