--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,7 +85,7 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 #Customize the right panel
 set -g status-right "#[fg=cyan]%d %b %R"
 #Adding utf8 support to the status bar
-set -g status-utf8 on
+#set -g status-utf8 on
 #Keep status bar info up-to-date default is 15 seconds
 set -g status-interval 60
 #Default window list is left aligned, this will center it between the panels (yep french)
@@ -106,5 +106,5 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
