updating tmux config to work with new settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,24 +56,17 @@ set -g status-bg black
 #Chaging window List colors
 #active window is red
 #inactive windows cyan
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+set -g window-status-style fg=cyan,bg=default,dim
+
 #use the default for a value so it inherits the color of status bar
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+set -g window-status-current-style fg=white,bg=red,bright
 
 #Change the color of the panes to see which is active
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+set -g pane-border-style fg=green,bg=black
+set -g pane-active-border-style fg=white,bg=yellow
 
 #Customize the command line for tmux in command mode
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 #Customizing the status bar
 #3 parts left panel; window list; right panel
@@ -108,3 +101,6 @@ unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+set -g default-shell "/bin/bash"
+set -g default-command "/bin/bash"
